<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Chat, should appear as action button if possible -->
    <item
            android:id="@+id/action_chat"
            android:icon="@drawable/ic_action_chat"
            android:title="@string/chat"
            app:showAsAction="always"/>

    <!-- "Log Out", should always be hidden -->
    <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/log_out"
            app:showAsAction="never"/>

    <!-- "Delete Account", should always be hidden-->
    <item
            android:id="@+id/action_delete"
            android:icon="@drawable/ic_action_delete"
            android:title="@string/delete_account"
            app:showAsAction="never"/>

    <!-- Exit, should appear as action button if possible -->
    <item
            android:id="@+id/action_exit"
            android:icon="@drawable/ic_action_exit"
            android:title="@string/exit"
            app:showAsAction="never"/>

</menu>
